src/test/ui/feature-gates/feature-gate-generic_associated_types.stderr
error[E0658]: generic associated types are unstable
  --> $DIR/feature-gate-generic_associated_types.rs:4:5
   |
LL |     type Pointer<T>: Deref<Target = T>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #44265 <https://github.com/rust-lang/rust/issues/44265> for more information
   = help: add `#![feature(generic_associated_types)]` to the crate attributes to enable

error[E0658]: generic associated types are unstable
  --> $DIR/feature-gate-generic_associated_types.rs:6:5
   |
LL | /     type Pointer2<T>: Deref<Target = T>
LL | |     where
LL | |         T: Clone,
LL | |         U: Clone;
   | |_________________^
   |
   = note: see issue #44265 <https://github.com/rust-lang/rust/issues/44265> for more information
   = help: add `#![feature(generic_associated_types)]` to the crate attributes to enable

error[E0658]: where clauses on associated types are unstable
  --> $DIR/feature-gate-generic_associated_types.rs:6:5
   |
LL | /     type Pointer2<T>: Deref<Target = T>
LL | |     where
LL | |         T: Clone,
LL | |         U: Clone;
   | |_________________^
   |
   = note: see issue #44265 <https://github.com/rust-lang/rust/issues/44265> for more information
   = help: add `#![feature(generic_associated_types)]` to the crate attributes to enable

error[E0658]: generic associated types are unstable
  --> $DIR/feature-gate-generic_associated_types.rs:17:5
   |
LL |     type Pointer<Usize> = Box<Usize>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #44265 <https://github.com/rust-lang/rust/issues/44265> for more information
   = help: add `#![feature(generic_associated_types)]` to the crate attributes to enable

error[E0658]: generic associated types are unstable
  --> $DIR/feature-gate-generic_associated_types.rs:19:5
   |
LL |     type Pointer2<U32> = Box<U32>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #44265 <https://github.com/rust-lang/rust/issues/44265> for more information
   = help: add `#![feature(generic_associated_types)]` to the crate attributes to enable

error[E0658]: where clauses on associated types are unstable
  --> $DIR/feature-gate-generic_associated_types.rs:24:5
   |
LL | /     type Assoc
LL | |     where
LL | |         Self: Sized;
   | |____________________^
   |
   = note: see issue #44265 <https://github.com/rust-lang/rust/issues/44265> for more information
   = help: add `#![feature(generic_associated_types)]` to the crate attributes to enable

error[E0658]: where clauses on associated types are unstable
  --> $DIR/feature-gate-generic_associated_types.rs:31:5
   |
LL |     type Assoc = Foo where Self: Sized;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #44265 <https://github.com/rust-lang/rust/issues/44265> for more information
   = help: add `#![feature(generic_associated_types)]` to the crate attributes to enable

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0658`.
